Demo/1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  namespace: demo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: demo-app
  type: ClusterIP
