Demo/3_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: skpakala.com
    http:
      paths:
        - pathType: Prefix
          path: /demo
          backend:
            service:
              name: demo-svc
              port:
                number: 80
          path: /
